--- a/index.html
+++ b/index.html
@@ -1,90 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Location</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abdul Rafay - Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Riot&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
-
-  <label>neighbourhood:</label>
-  <div style="color:brown; font-size: 25px;" id="neighbourhood"></div>
-
-  <div>
-    <label>country:</label>
-    <div style="color:brown; font-size: 25px;" id="country"></div>
-  </div>
-
-  <div>
-    <label>county:</label>
-    <div style="color:brown; font-size: 25px;" id="county"></div>
-  </div>
-
-  <div>
-    <label>postcode:</label>
-    <div style="color:brown; font-size: 25px;" id="postcode"></div>
-  </div>
-
-  <div>
-    <label>state:</label>
-    <div style="color:brown; font-size: 25px;" id="state"></div>
-  </div>
-
-  <div>
-    <label>town:</label>
-    <div style="color:brown; font-size: 25px;" id="town"></div>
-  </div>
-
-  <div>
-    <label>latitude:</label>
-    <div style="color:brown; font-size: 25px;" id="latitude"></div>
-  </div>
-
-  <div>
-    <label>longitude:</label>
-    <div style="color:brown; font-size: 25px;" id="longitude"></div>
-  </div>
-
-  <script>
-    const neighbourhood = document.getElementById('neighbourhood')
-    const country = document.getElementById('country')
-    const county = document.getElementById('county')
-    const postcode = document.getElementById('postcode')
-    const state = document.getElementById('state')
-    const town = document.getElementById('town')
-    const latitudes = document.getElementById('latitude')
-    const longitudes = document.getElementById('longitude')
-
-    function initMap(latitude, longitude) {
-      if ("geolocation" in navigator) {
-        navigator.geolocation.getCurrentPosition(async (position) => {
-          const { latitude, longitude } = position.coords;
-          const url = `https://nominatim.openstreetmap.org/reverse?lat=${latitude}&lon=${longitude}&format=json`
-          const loc = await fetch(url).then(res => res.json())
-          console.log(loc);
-          latitudes.innerHTML = latitude
-          longitudes.innerHTML = longitude
-          console.log(latitude);
-          neighbourhood.innerHTML = loc.address.neighbourhood
-          country.innerHTML = loc.address.country
-          county.innerHTML = loc.address.county
-          postcode.innerHTML = loc.address.postcode
-          state.innerHTML = loc.address.state
-          town.innerHTML = loc.address.town
-          
-        },
-          (error) => {
-            console.error("Error getting location:", error.message);
-          }
-        );
-      } else {
-        console.error("Geolocation is not supported by your browser");
-      }
-    }
-    initMap();
-  </script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
